<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/flContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor" />

    <RadioGroup
        android:id="@+id/tabs_rg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:baselineAligned="false"
        >

        <RadioButton
            android:id="@+id/tvGallery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/selector_bottom_bar_gallery"
            android:button="@null"
            android:text="@string/text_gallery"
            android:textColor="@color/selector_gray_green_txt"
            android:textSize="@dimen/txt_tips_small"
            android:layout_weight="1.0"
            android:gravity="center"
            android:singleLine="true"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/tvIdea"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/selector_bottom_bar_idea"
            android:button="@null"
            android:text="@string/text_idea"
            android:textColor="@color/selector_gray_green_txt"
            android:textSize="@dimen/txt_tips_small"
            android:layout_weight="1.0"
            android:gravity="center"
            android:singleLine="true"
            />

        <RadioButton
            android:id="@+id/tvMine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/selector_bottom_bar_mine"
            android:button="@null"
            android:text="@string/text_mine"
            android:textColor="@color/selector_gray_green_txt"
            android:textSize="@dimen/txt_tips_small"
            android:layout_weight="1.0"
            android:gravity="center"
            android:singleLine="true"
            />

    </RadioGroup>

</LinearLayout>